# Beacon

./: .beacon-git-config.json  .gitignore  404.html  BeaconRelease.py  CMakeLists.txt  CNAME  COMMIT_WORKFLOW.md  MODERN_STRUCTURE.md  README.md  UNIFIED_SYSTEM.md  _config.yml  about.html  app-config.json  beacon-build.py  beacon-config.json  beacon-config.py  beacon-git-commit.py  beacon-platform.code-workspace  beacon-reset-config.py  beacon-run.py  beacon-simple.py  beacon-sliding-panels.patch  beacon-start-session.py  beacon-start.py  beacon-unified.py  cat_cmd  create-issue.sh  debug_config.json  demo-unified-system.sh  how HEAD:index.html | grep -A 5 'Stop training'  index-backup.html  index-experimental.html  index.html  index_backup.html  launch-generator-ui.py  launch-universal-config.py  live-text-preview.html  panel-grid-demo.html  quick-test.html  requirements.txt  (+18 more)
beacon-core/: CMakeLists.txt  VERSION  beacon-build.py  beacon-run.py
beacon-core/cmake/: BeaconAppCommon.cmake
beacon-core/config/: README.md
beacon-core/config/algorithms/: my_strategy_config.json
beacon-core/config/apps/generator/: sample_config.json
beacon-core/config/system/: startBeacon.json  startBeaconCME.json
beacon-core/docs/: README.md  installation-guide.html
beacon-core/docs/exchange_protocols/cme/: cme-ilink.html
beacon-core/docs/system/: architecture.md
beacon-core/include/hft/concurrency/: pinned_thread.h  thread_utils.h
beacon-core/include/hft/core/: cpu_pause.h
beacon-core/include/hft/networking/: hton_utils.h  tcp_client.h  tcp_server.h  udp_receiver.h  udp_socket.h
beacon-core/include/hft/profiling/: latency_tracker.h
beacon-core/include/hft/ringbuffer/: spsc_ringbuffer.h  spsc_ringbuffer_consumer.h
beacon-core/include/utils/: string_utils.cpp  string_utils.h
beacon-core/libs/: CMakeLists.txt
beacon-core/libs/beacon_algorithm/: CMakeLists.txt
beacon-core/libs/beacon_algorithm/client_algorithms/: pov_algorithm.h  twap_algorithm.h
beacon-core/libs/beacon_algorithm/src/: config_cache.cpp
beacon-core/libs/beacon_decoder/: CMakeLists.txt
beacon-core/libs/beacon_encoder/: CMakeLists.txt
beacon-core/libs/beacon_exchange/: CMakeLists.txt  protocol_types.h
beacon-core/libs/beacon_hft/: CMakeLists.txt  cpu_pause.h
beacon-core/libs/beacon_hft/profiling/: latency_tracker.h
beacon-core/libs/beacon_hft/ringbuffer/: spsc_ringbuffer.h
beacon-core/libs/beacon_networking/: CMakeLists.txt
beacon-core/libs/beacon_networking/src/: tcp_client.cpp
beacon-core/src/: dataset_generator.hpp
beacon-core/src/apps/: README.md
beacon-core/src/apps/client_algorithm/: CMakeLists.txt  README.md
beacon-core/tests/: CMakeLists.txt  README.md
beacon-core/tests/algorithm/: test_strategy_logic.cpp
beacon-core/tests/core/: test_latency_tracker.cpp  test_ringbuffer.cpp
beacon-core/tests/integration/: test_tick_to_trade.cpp
libs/beacon_algorithm/: CMakeLists.txt
libs/beacon_algorithm/client_algorithms/: pov_algorithm.h  twap_algorithm.h
libs/beacon_algorithm/include/beacon_algorithm_setup/: algorithm_registry.h  base_algorithm.h  config_cache.h  config_constants.h
libs/beacon_algorithm/src/: config_cache.cpp
libs/beacon_decoder/: CMakeLists.txt
libs/beacon_decoder/src/serializers/: BaseSerializer.cpp  SerializerFactory.cpp
libs/beacon_encoder/: CMakeLists.txt
libs/beacon_encoder/include/beacon_encoder/: encoder_concepts.h  execution_message.h  market_data_message.h
libs/beacon_encoder/src/cme/: execution_encoder.cpp  market_data_encoder.cpp
libs/beacon_encoder/src/nasdaq/: execution_encoder.cpp  market_data_encoder.cpp
libs/beacon_encoder/src/nyse/: execution_encoder.cpp  market_data_encoder.cpp
libs/beacon_exchange/: CMakeLists.txt  protocol_types.h
libs/beacon_exchange/include/beacon_exchange/: protocol_common.h
libs/beacon_hft/: CMakeLists.txt  cpu_pause.h
libs/beacon_hft/concurrency/: pinned_thread.h  thread_utils.h
libs/beacon_hft/networking/: hton_utils.h  tcp_client.h  tcp_server.h  udp_receiver.h  udp_socket.h
libs/beacon_hft/ringbuffer/: spsc_ringbuffer.h  spsc_ringbuffer_consumer.h
libs/beacon_networking/: CMakeLists.txt
libs/beacon_networking/include/beacon_networking/: multicast_receiver.h  tcp_client.h
libs/beacon_networking/src/: tcp_client.cpp
src/apps/client_algorithm/: CMakeLists.txt  CMakeLists_old_v3.txt  README.md  beacon-build-app.py  build.py  main.cpp
src/apps/client_algorithm/include/: ConfigProvider.h  TwapProtocolExecutor.h
src/apps/client_algorithm/src/: AlgoTemplate.cpp  AlgoTwap.cpp  AlgoTwapProtocol.cpp  ClientAlgorithm.cpp  ClientAlgorithmHft.cpp  ConfigProvider.cpp  ExampleLatencyTracking.cpp  MarketDataReceiver.cpp  TestCme.cpp  TestPillar.cpp  TwapProtocolExecutor.cpp  main.cpp
src/apps/generator/: CMakeLists.txt  ConfigFileParser.cpp  ConfigFileParser.h  ConfigFileValidator.h  README.md  beacon-build-app.py  beacon-build-debug.py  beacon-build-release.py  build.py  sample_config.json
src/apps/generator/include/: ConfigFileParser.h  ConfigFileValidator.h  ConfigProvider.h  Message.h  MessageGenerator.h  StatsManager.h  SymbolGenerationData.h  SymbolParameters.h  UnifiedSerializer.h
src/apps/generator/scripts/: beacon-clean-all.py  beacon-kill-all.py  beacon-run-debug.py  beacon-run-release.py  beacon-run-tests.py
src/apps/generator/src/: ConfigFileParser.cpp  ConfigFileValidator.cpp  ConfigProvider.cpp  MessageGenerator.cpp  StatsManager.cpp  main.cpp
src/apps/generator/tests/: CMakeLists.txt  README.md  TestConfigProvider.cpp  TestCsvSerializer.cpp  TestGeneratorIntegration.cpp  TestGeneratorIntegration_backup.cpp  (+4 more)
src/apps/matching_engine/: CMakeLists.txt  beacon-build-app.py  beacon-run-demo.py  build.py  main.cpp
src/apps/playback/: BinaryFileReplayer.h  BinaryInputFileReader.h  CMakeLists.txt  PlaybackState.h  beacon-build-app.py  binary_file_replayer.h  binary_input_file_reader.h  build.py  main.cpp
tests/: CMakeLists.txt
tests/protocols/: test_itch_messages.cpp  test_itch_serialization.cpp  test_mdp_messages.cpp  test_ouch_messages.cpp  test_pillar_messages.cpp
(+640 files in other folders)
